<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ModificarTurnoActivity">

    <TextView
        android:id="@+id/textViewModificarTurno"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/modificar_turno"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageSesionMT"
                android:layout_width="77dp"
                android:layout_height="80dp"
                android:contentDescription="@string/img_sesion"
                android:src="@drawable/ic_masaje" />

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/tipoDeSesionMT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="77dp"
                android:layout_height="57dp"
                android:contentDescription="@string/img_calendario"
                android:src="@drawable/ic_calendario" />

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewFechaTurnoMT"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="bottom|left"
                android:hint="@string/hint_fecha"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="77dp"
                android:layout_height="65dp"
                android:layout_weight="0"
                android:contentDescription="@string/img_reloj"
                app:srcCompat="@drawable/ic_reloj" />

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textViewHoraTurnoMT"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="bottom|left"
                android:hint="@string/hint_hora"
                android:inputType="date"
                android:onClick="showTimePickerDialog"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Space
                android:layout_width="11dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="77dp"
                android:layout_height="65dp"
                android:contentDescription="@string/img_esta_pago"
                app:srcCompat="@drawable/ic_dinero" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxEstaPagoMT"
                android:layout_width="306dp"
                android:layout_height="match_parent"
                android:text="@string/esta_pago"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="11dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCancelarNuevoTurno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonCancelarClick"
            android:text="@string/cancelar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonAceptarNuevoTurno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onButtonModificarTurnoClick"
            android:text="@string/aceptar" />

        <Space
            android:layout_width="11dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:layout_weight="1" />

</LinearLayout>