<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BuscarPacienteActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_paciente"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_perm_identity_24px"
            android:contentDescription="@string/img_persona" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="67dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButtonCancelar"
            android:text="@string/cancelar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButtonAceptar"
            android:text="@string/aceptar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>